syntax = "proto3";

package recognize;

service Recognize {
   rpc recognize_audio(stream Message) returns (stream Response) {}
   rpc recognize_audio_file_mode(stream FileUploadMessage) returns (stream Response) {}
   rpc recognize_srt (SRTRequest) returns (SRTResponse) {}
}

message Message {
  bytes audio = 1;
  string user = 2;
  string language = 3;
  bool speaking = 4;
  bool isEnd = 5;
}

message SRTRequest {
  bytes audio = 1;
  string user = 2;
  string language = 3;
  string filename = 4;
}

message SRTResponse {
  string srt = 1;
  string user = 2;
  string language = 3;
}

message FileUploadMessage {
  bytes audio = 1;
  string user = 2;
  string language = 3;
  string filename = 4;
}

message Response {
    string transcription = 1;
    string user = 2;
    string language = 3;
    string action = 4;
}
